--- a/package.json
+++ b/package.json
@@ -36,19 +36,23 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-compress": "^0.14.0",
     "grunt-webpack": "^1.0.11",
     "http-server": "^0.8.5",
     "koa": "^1.1.2",
     "koa-cors": "0.0.16",
     "koa-middlewares": "^2.1.0",
+    "node-sass": "^3.8.0",
+    "object.assign": "^4.0.4",
     "prismjs": "^1.4.1",
     "react-transform-boilerplate": "^1.0.0",
     "redux-logger": "^2.3.1",
+    "sass-loader": "^4.0.0",
     "sqlite3": "^3.1.4",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.12",
+    "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4"
   },
