--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "description": "r2",
   "dependencies": {
-    "antd": "^1.2.1",
+    "antd": "^1.6.5",
     "history": "^1.17.0",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.0",
-    "react": "^0.14.3",
+    "react": "^15.2.1",
     "react-d3-components": "^0.6.2",
     "react-dom": "^0.14.3",
     "react-redux": "^4.4.5",
@@ -20,12 +20,13 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-core": "^6.0.1",
+    "babel-core": "^6.11.4",
+    "babel-helper-replace-supers": "^6.8.0",
     "babel-loader": "^6.0.20",
     "babel-plugin-antd": "^0.4.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.0.1",
     "babel-preset-stage-0": "^6.5.0",
     "co-body": "^4.0.0",
