Rwrite 重构和重写智能路由和reducer功能

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "http-server": "^0.8.5",
     "koa": "^1.1.2",
     "koa-cors": "0.0.16",
-    "koa-middlewares": "^2.1.0",
     "node-sass": "^3.8.0",
+	"koa-router": "^7.0.1",
     "object.assign": "^4.0.4",
     "prismjs": "^1.4.1",
     "react-transform-boilerplate": "^1.0.0",
@@ -58,12 +58,14 @@
     "webpack-hot-middleware": "^2.6.4"
   },
   "scripts": {
-    "buildw": "set NODE_ENV=production &&node --harmony ./.fr/generator/backend/script/generator/action/CreateRouterAndReducer.js && grunt",
-    "startw": "set NODE_ENV=development && node server.js",
-    "build": "export NODE_ENV=production &&node --harmony ./.fr/generator/backend/script/generator/action/CreateRouterAndReducer.js && grunt",
-    "start": "export NODE_ENV=development && node server.js",
     "startend": "node --harmony ./.fr/generator/backend/app.js",
-    "ac": "export NODE_ENV=development && node --harmony ./.fr/generator/backend/script/generator/action/CreateRouterAndReducer.js",
+    "buildw": "set NODE_ENV=production && node --harmony ./.end/script/createRouteAndReducer.js && grunt",
+    "startw": "set NODE_ENV=development && node server.js",
+    "build": "export NODE_ENV=production && node --harmony ./.end/script/createRouteAndReducer.js && grunt",
+    "start": "export NODE_ENV=development && node server.js",
+    "i": "npm install && cd ./.end && npm install && cd ../",
+    "ac": "export NODE_ENV=development && node --harmony ./.end/script/createRouteAndReducer.js",
+    "startboth": "npm start & npm run startend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sam",
