modify import to require

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "i": "npm install && cd ./.end && npm install && cd ../",
     "ci": "cnpm install && cd ./.end && cnpm install && cd ../",
     "ac": "node --harmony ./.end/script/createRouteAndReducer.js",
+    "acm": "node --harmony ./.end/script/createRouteAndReducer.js -m",
     "startboth": "npm start & npm run startend",
     "startwboth": "npm run startw & npm run startend",
     "test": "echo \"Error: no test specified\" && exit 1"
