--- a/.end/package.json
+++ b/.end/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015-node5": "^1.2.0",
     "babel-preset-stage-3": "^6.5.0",
     "commander": "^2.9.0",
+    "fs-extra": "^0.30.0",
     "http-server": "^0.9.0",
     "koa": "^2.0.0",
     "koa-router": "^7.0.1",
