--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "history": "^1.17.0",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.0",
+    "js-cookie": "^2.1.2",
     "react": "^15.2.1",
     "react-d3-components": "^0.6.2",
     "react-dom": "^15.3.0",
