--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,14 @@
 {
 	"presets": ["react", "es2015","stage-0"],
 	"plugins": [
-		["antd"],
+		["import", [{ "libraryName": "antd", "style": "css" }]],
 		"transform-decorators-legacy",
 	],
 	"env": {
 		"development": {
-			"presets": ["react-hmre"]
+			plugins: [
+				"react-hot-loader/babel",
+			]
 		}
 	}
 }
