--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.4",
   "description": "r2",
   "dependencies": {
-    "antd": "^1.6.5",
+    "antd": "^1.8.0",
     "es6-shim": "^0.35.1",
     "history": "^1.17.0",
     "immutable": "^3.8.1",
@@ -25,7 +25,7 @@
     "babel-core": "^6.11.4",
     "babel-helper-replace-supers": "^6.8.0",
     "babel-loader": "^6.0.20",
-    "babel-plugin-antd": "^0.4.0",
+    "babel-plugin-import": "^1.0.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
@@ -42,6 +42,7 @@
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-compress": "^0.14.0",
     "grunt-webpack": "^1.0.11",
+    "html-webpack-plugin": "^2.22.0",
     "http-server": "^0.8.5",
     "koa": "^1.1.2",
     "koa-cors": "0.0.16",
@@ -50,6 +51,7 @@
     "node-sass": "^3.8.0",
     "object.assign": "^4.0.4",
     "prismjs": "^1.4.1",
+    "react-hot-loader": "^3.0.0-beta.5",
     "react-transform-boilerplate": "^1.0.0",
     "redux-logger": "^2.3.1",
     "sass-loader": "^4.0.0",
